stackgres-operator.validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: stackgres-operator
    meta.helm.sh/release-namespace: stackgres-67877db5
  creationTimestamp: "2025-01-15T09:20:09Z"
  generation: 2
  labels:
    app.kubernetes.io/managed-by: Helm
  name: stackgres-operator
  resourceVersion: "45354"
  uid: 22b07692-742d-4225-9ce1-8a86b9304c71
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgcluster
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgcluster.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgclusters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sginstanceprofile
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sginstanceprofile.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sginstanceprofiles
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgpgconfig
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgpgconfig.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgpgconfigs
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgpoolconfig
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgpoolconfig.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgpoolconfigs
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgbackup
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgbackup.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgbackups
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgdistributedlogs
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgdistributedlogs.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgdistributedlogs
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgdbops
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgdbops.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgdbops
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgobjectstorage
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgobjectstorage.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgobjectstorages
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgscript
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgscript.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgscripts
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgshardedcluster
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgshardedcluster.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgshardedclusters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgshardedbackup
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgshardedbackup.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgshardedbackups
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgshardeddbops
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgshardeddbops.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgshardeddbops
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdFakNDQS9xZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd0hoY05NalV3TVRFMU1Ea3lNREkwV2hjTk1qY3dNVEUxTURreU1ESXhXakJUTVJVd0V3WURWUVFLRXd4emVYTjBaVzA2Ym05a1pYTXhPakE0QmdOVkJBTVRNWE41YzNSbGJUcHViMlJsT25OMFlXTnJaM0psY3kxdmNHVnlZWFJ2Y2k1emRHRmphMmR5WlhNdE5qYzROemRrWWpVd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQU [...]
    service:
      name: stackgres-operator
      namespace: stackgres-67877db5
      path: /stackgres/validation/sgstream
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sgstream.validating-webhook.stackgres.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - stackgres.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - sgstreams
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
